# LearnOpenGL

./: .gitignore  CMakeLists.txt
cmake/: CPM.cmake  FindTargets.cmake  MakeFolder.cmake  ThirdParty.cmake
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  main.cpp
