cmake_minimum_required(VERSION 3.22)
project(learn_opengl)

set(CMAKE_CXX_STANDARD 20)

# ExternalProject base
set_property(DIRECTORY PROPERTY EP_BASE ${CMAKE_BINARY_DIR}/subprojects)

set(STAGED_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/stage)
set(EP_SOURCE_DIR_PREFIX ${CMAKE_BINARY_DIR}/subprojects/Source)

add_subdirectory(external)

include(ExternalProject)
ExternalProject_Add(${PROJECT_NAME}_core
        DEPENDS GLFW_external GLEW_external glm_external
        SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src
        CMAKE_ARGS
        -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
        -DSTAGED_INSTALL_PREFIX=${STAGED_INSTALL_PREFIX}
        CMAKE_CACHE_ARGS
        -DCMAKE_PREFIX_PATH:PATH=${CMAKE_PREFIX_PATH}
        BUILD_ALWAYS ON
        INSTALL_COMMAND ""
)